fix (frontend): align items on animal profile

--- a/Frontend/pawcients-front/src/css/global/animalprofile.scss
+++ b/Frontend/pawcients-front/src/css/global/animalprofile.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
   padding: 20px;
 }
 
@@ -13,7 +12,11 @@
   border-radius: 15px;
   padding: 20px;
   margin: 40px;
-  width: 100%;
+  width: 25em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   max-width: 600px;
   @media (max-width:750px) {
     margin-top: 150px;
